<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="name">Name: Oru Chinenye</string>
    <string name="username">Slack Username: Nancychinny</string>
    <string name="email">Email: oruchinenye12@gmail.com</string>
    <string name="track"> Track: Mobile Development</string>
</resources>
